--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,4 +1,6 @@
-FROM python:3 AS minimal
+FROM python:3 AS build
+
+RUN apt -y update && apt -y install ffmpeg
 
 RUN python3 -m pip install --upgrade pip typed_settings requests attrs
 RUN python3 -m pip install git+https://github.com/openai/whisper.git
@@ -8,6 +10,3 @@ ADD landline /landline
 
 WORKDIR /
 CMD ["python3", "/landline/main.py"]
-
-FROM minimal AS full
-RUN python3 /landline/main.py --preload-only
